estilização do header

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&display=swap">
 </head>
 <body>
-    <header class="flex-container">
-        <h1>FlexTurismos</h1>
-        <ul class="flex-container">
-            <li><a href="#quem-somos">Quem Somos</a></li>
-            <li><a href="#servicos">Serviços</a></li>
-            <li><a href="#planos">Planos</a></li>
-        </ul>
+    <header>
+        <div class="flex-container menu">
+            <div>
+                <h1>FlexTurismos</h1>
+            </div>
+            <ul class="list-items">
+                <li><a href="#quem-somos">Quem Somos</a></li>
+                <li><a href="#servicos">Serviços</a></li>
+                <li><a href="#planos">Planos</a></li>
+            </ul>
+        </div>
     </header>
 
     <div class="flex-container">
