--- a/index.html
+++ b/index.html
@@ -47,27 +47,28 @@
     </div>
  
 
-    <div>
-        <div class="flex-container">
+    <div class="container-externo">
+        <div class="flex-container" id="servicos">
             <div>
                 <h2>Serviços</h2>
             </div>  
 
-            <div>
-                <div>
+            <div class="list-servicos">
+                <div class="item-servico">
                     <div><img src="./images/icon-2.png" alt="hospedagens"></div>
                     <p>Hospedagens</p>
                     <a href="#">Comprar Agora</a>
                 </div>
 
-                <div>
-                    <div><img src="./images/icon-1.png" alt="pacote de viagens"></div>
+                <div class="item-servico">
+                    <div ><img src="./images/icon-1.png" alt="pacote de viagens"></div>
                     <p>Pacotes de viagens</p>
                     <a href="#">Comprar Agora</a>
                 </div>
 
-                <div>
-                    <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
+                <div class="item-servico">
+                    <div>
+                        <div><img src="./images/icon-3.png" alt="roteiros personalizados"></div>
                     <p>Roteiros personalizados</p>
                     <a href="#">Comprar Agora</a>
                 </div>
@@ -75,7 +76,7 @@
             </div>
         </div>
     </div>
-
+    </div>
     <div class="flex-container">
         <div>
             <h3>Plano 2</h3>
