--- a/index.html
+++ b/index.html
@@ -120,9 +120,11 @@
         </div>
     </div>
 
-    <footer class="flex-container">
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Seu nome aqui dev</p>
+    <footer>
+       <div class="flex-container footer">
+            <p>&copy; 2022 CSS Flexbox</p>
+            <p>Desenvolvido por: Thiago Carneiro</p>
+       </div>
     </footer>
 </body>
 </html>
